--- a/code.html
+++ b/code.html
@@ -36,7 +36,7 @@
             
             <p>
                 <b>Code arduino</b><br><br>
-                <a href="alarm.ino" download="LotteVerbraekenCode">Download ino-bestand</a>
+                <a href="DefAlarmClock.ino" download="LotteVerbraekenCode">Download ino-bestand</a>
                 <br><br><br><br>
                 
                 <b>Code Android</b><br><br>
